[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/themes/minimalUI/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://Games/StoneAge/assets/new_map_bg_blur.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/CreateAccount.gd" type="Script" id=4]
[ext_resource path="res://Scenes/MailSender.gd" type="Script" id=5]

[node name="CreateAccount" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.403922, 0.403922, 0.403922, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="NewAccount" type="Panel" parent="."]
margin_left = 204.0
margin_top = 52.0
margin_right = 625.0
margin_bottom = 363.0
theme = ExtResource( 2 )

[node name="btn_back" type="Button" parent="NewAccount"]
margin_left = 392.0
margin_top = -7.0
margin_right = 432.0
margin_bottom = 23.0
text = "X"

[node name="VBox" type="VBoxContainer" parent="NewAccount"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 15.0
margin_right = -18.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="NewAccount/VBox"]
margin_right = 378.0
margin_bottom = 23.0
text = "Crear Nueva Cuenta"
align = 1

[node name="name" type="LineEdit" parent="NewAccount/VBox"]
margin_top = 35.0
margin_right = 378.0
margin_bottom = 72.0
max_length = 10
placeholder_text = "Nombre"

[node name="pass" type="LineEdit" parent="NewAccount/VBox"]
margin_top = 84.0
margin_right = 378.0
margin_bottom = 121.0
max_length = 12
placeholder_text = "Clave"

[node name="mail" type="LineEdit" parent="NewAccount/VBox"]
margin_top = 133.0
margin_right = 378.0
margin_bottom = 170.0
placeholder_text = "Mail"

[node name="code" type="LineEdit" parent="NewAccount/VBox"]
margin_top = 182.0
margin_right = 378.0
margin_bottom = 219.0
placeholder_text = "CÃ³digo Secreto"

[node name="btn_code" type="Button" parent="NewAccount/VBox/code"]
margin_left = 236.0
margin_top = 1.0
margin_right = 377.0
margin_bottom = 36.0
text = "OBTENER"

[node name="btn_create" type="Button" parent="NewAccount/VBox"]
margin_top = 231.0
margin_right = 378.0
margin_bottom = 260.0
text = "CREAR CUENTA"

[node name="float_message" type="ColorRect" parent="."]
margin_right = 453.0
margin_bottom = 54.0
rect_min_size = Vector2( 50, 50 )
color = Color( 0, 0, 0, 0.862745 )

[node name="Label" type="Label" parent="float_message"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_right = -13.0
custom_colors/font_color = Color( 0.968627, 1, 0.392157, 1 )
custom_fonts/font = ExtResource( 1 )
text = "CLAVE INCORRECTA"
align = 1
valign = 1
autowrap = true

[node name="MailSender" type="HTTPRequest" parent="."]
script = ExtResource( 5 )
